# investor_agent_data

./: .gitignore  .pre-commit-config.yaml  README.md  cSpell.json  download_nse_bhavcopy.py  indian_holidays.py  nse_holidays.csv  pyproject.toml
gcp_upload/: README.md  create_local_structure.py
holidays/: indian_holidays.py
nse_download/: README.md  analyze_existing_files.py  download_nse_data.py  download_nse_data_browser.py  download_nse_data_headless.py  indian_holidays.py
